# mupen64-rr-lua

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md
.github/workflows/: main.yml
docs/lua/: build_documentation.bat
docs/lua/script/: buildSite.py
docs/lua/static/: index-no-min.html  index.html
docs/win/: 3. Actions.md  4. Settings.md  5. Capturing.md  8. Data-Formats.md
src/: CMakeLists.txt  api.lua
src/Common/: CMakeLists.txt
src/Common/include/: StrUtils.h
src/Core/: Core.cpp
src/Core/include/: core_api.h  core_types.h
src/Core/r4300/: vcr.cpp  vcr.h
src/Plugins.Input.Dummy/: Main.h
src/Plugins.RSP.TAS/: Disasm.cpp  Disasm.h  Main-New.cpp  Main.h  UCode2.cpp
src/Unix/: CMakeLists.txt  Plugins.Common.Unix.cmake
src/Unix/Plugins.Audio.Dummy/: CMakeLists.txt  Main.cpp  Main.h
src/Unix/Plugins.Input.Dummy/: CMakeLists.txt  Main.cpp  Main.h
src/Unix/Plugins.RSP.Dummy/: CMakeLists.txt  Main.cpp  Main.h
src/Unix/Plugins.RSP.TAS/: CMakeLists.txt  Config.cpp  Config.h  Disasm.cpp  HLE.h  JPEG.cpp  Main-New.cpp  Main-New.h  Main.cpp  Main.h  UCode1.cpp  UCode2.cpp  UCode3.cpp  pch.cpp  pch.h
src/Unix/Plugins.Video.Dummy/: CMakeLists.txt  Main.cpp  Main.h
src/Unix/Views.Unix/: CMakeLists.txt  main.cpp  menubar.cpp  menubar.h  pch.h  rombrowser.cpp  rombrowser.h
src/Unix/Views.Unix/components/: file.cpp  file.h  menubar.cpp
src/Views.Win32/: CMakeLists.txt  DialogService.cpp  Main.cpp  Main.h
src/Views.Win32/components/: AppActions.cpp
src/Views.Win32/lua/modules/: D2D.h
src/Website/: .gitignore  package.json
src/Website/src/: app.css
src/Website/src/lib/helpers/: DocFetcher.ts  DocNameConverter.ts
src/Website/src/routes/: +layout.server.ts  +layout.svelte  +page.svelte
src/Website/src/routes/docs/win/[...slug]/: +layout.svelte  +page.server.ts  +page.svelte
src/Website/src/routes/sm64luaredux/: +page.svelte
src/Website/src/routes/ugui/: +page.svelte
src/Website/static/docs/win/: 3. Actions.md  4. Settings.md
src/Windows/: CMakeLists.txt  Plugins.Common.Win32.cmake
src/Windows/Plugins.Audio.Dummy/: Main.h
src/Windows/Plugins.RSP.Dummy/: Main.h
src/Windows/Plugins.RSP.TAS/: MP3.cpp  Main-New.h  Resource.h  Resource.rc
src/Windows/Plugins.Video.Dummy/: Main.h
src/Windows/Views.Win32/: ActionManager.h  Config.cpp  Config.h  DialogService.h  Hotkey.cpp  Hotkey.h  Loggers.cpp  Loggers.h  Main.cpp  Main.h  Messenger.cpp  Messenger.h  ResizeAnchor.cpp  ResizeAnchor.h  ThreadPool.cpp  ThreadPool.h  ViewHelpers.h  resource.h
src/Windows/Views.Win32/capture/: EncodingManager.cpp  EncodingManager.h  Resampler.cpp  Resampler.h
src/Windows/Views.Win32/capture/encoders/: Encoder.h  FFmpegEncoder.cpp  FFmpegEncoder.h  VFWEncoder.cpp  VFWEncoder.h
src/Windows/Views.Win32/components/: ActionMenu.cpp  ActionMenu.h  AppActions.cpp  AppActions.h  Benchmark.h  CLI.h  Cheats.h  CommandPalette.cpp  CommandPalette.h  Compare.h  ConfigDialog.h  CoreDbg.h  CrashManager.cpp  CrashManager.h  Dispatcher.cpp  Dispatcher.h  FilePicker.cpp  FilePicker.h  HotkeyTracker.cpp  HotkeyTracker.h  LuaDialog.h  MGECompositor.cpp  MGECompositor.h  MovieDialog.h  PianoRoll.h  RecentItems.cpp  RecentItems.h  Seeker.h  SettingsListView.cpp  SettingsListView.h  Statusbar.cpp  Statusbar.h  TextEditDialog.cpp  TextEditDialog.h  UpdateChecker.h
src/Windows/Views.Win32/lua/: LuaCallbacks.h  LuaManager.h  LuaRegistry.h  LuaRenderer.cpp  LuaRenderer.h  LuaTypes.h
src/Windows/Views.Win32/lua/modules/: AVI.h  Hotkey.h  Joypad.h  Memory.h  Savestate.h
src/Windows/Views.Win32/lua/presenters/: DCompPresenter.cpp  DCompPresenter.h  GDIPresenter.cpp  GDIPresenter.h  Presenter.h
test/Core.Tests/: CMakeLists.txt  Mupen64RR.Core.Tests-b12d07c_include.cmake  vcr_tests.cpp
test/Lua.TestLib/: main.cpp
test/lua/: tests.lua
test/lua/manual/: 420.lua
